--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 
 <body>
     <h1>
-      <a href="https://lazydyhan.github.io/tvboxinstall/TVBox.apk">点我下载TVBox安装包</a>
-
+      <a href="https://gitee.com/crazyhan__5/test/releases/download/tvbox/TVBox.apk">点我下载TVBox安装包</a>
     </h1>
 <li>请注意，由于厂商限制，部分品牌可能无法安装原生版本，如果遇到安装失败，请下载下方的TVBoxPlus进行安装</li>
 <h2>
- <a href="https://lazydyhan.github.io/tvboxinstall/TVBox Plus_mod.apk">点我下载TVBoxPlus</a>
+ <a href="https://gitee.com/crazyhan__5/test/releases/download/tvboxplus/TVBox%20Plus_mod.apk">点我下载TVBoxPlus</a>
     </h2>
 <li>在安装时，您需要了解怎么在电视安装第三方软件，点击下方进行了解。</li>
 <h3>
